[package]
description = "A Cassandra CQL driver, built on top of the DataStax C++ driver for performance and functionality."
documentation = "https://docs.rs/cassandra-cpp"
# no homepage yet
repository = "https://github.com/Metaswitch/cassandra-rs"
readme = "README.md"
keywords = [ "Cassandra", "binding", "CQL", "client", "database" ]
categories = [ "api-bindings", "database", "external-ffi-bindings", "asynchronous" ]
license = "Apache-2.0"
name = "cassandra-cpp"
version = "0.15.2-pre"
authors = ["Tupshin Harper <tupshin@tupshin.com>", "Keith Wansbrough <Keith.Wansbrough@metaswitch.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "Metaswitch/cassandra-rs" }

[dependencies]
clippy = {version = "0.0", optional = true}
slog = "2"
cassandra-cpp-sys = { version = "0.12.2", features = [] }
decimal = "2"
time = "0.2"
uuid = "0.8"
error-chain = "0.12"
parking_lot = "0.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
futures = "0.3.1"

[features]
default = []
vendored = ["cassandra-cpp-sys/vendored-cmake"]

[patch.crates-io]
cassandra-cpp-sys = { git = "https://github.com/sgg/cassandra-sys-rs", branch = "sgg/vendored-datastax"}
libuv-sys2 = { git = "https://github.com/sgg/libuv-sys/", branch = "sgg/build_with_cmake" }
